# nagoom

./: .gitignore  CMakeLists.txt
include/: byteorder.h  nagoom.hpp  nagoom.hpp.in  networkmanager.hpp
include/nagoom/: client.hpp  connection.hpp  message.hpp  packetstream.hpp
sources/client/: CMakeLists.txt
sources/client/src/: main.cpp
sources/nagoom/: CMakeLists.txt
sources/nagoom/include/: nagoom.hpp  nagoom.hpp.in
sources/nagoom/include/nagoom/: client.hpp  connection.hpp  message.hpp
sources/nagoom/src/: client.cpp  connection.cpp  message.cpp
sources/serializer/: CMakeLists.txt
sources/serializer/include/: serializer.hpp
sources/serializer/include/serializer/: container.hpp  file.hpp  variant.hpp
sources/serializer/src/: container.cpp  file.cpp  variant.cpp
src/: main.cpp  networkmanager.cpp
src/nagoom/: client.cpp  connection.cpp  message.cpp  packetstream.cpp
