PROJECT(Nagoom)

SET(CMAKE_BUILD_TYPE Debug)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=gnu++0x)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

INCLUDE_DIRECTORIES(include)

SET(NAGOOM_SOURCES
	src/main.cpp
	src/nagoom/client.cpp
	src/nagoom/connection.cpp
)

ADD_EXECUTABLE(nagoom ${NAGOOM_SOURCES})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
