PROJECT(Nagoom)

SET(CMAKE_BUILD_TYPE Debug)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_BUILD_TYPE Debug)

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=gnu++0x)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

ADD_SUBDIRECTORY(sources/client)
ADD_SUBDIRECTORY(sources/nagoom)
ADD_SUBDIRECTORY(sources/serializer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
