INCLUDE_DIRECTORIES(include)

SET(NAGOOM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "Nagoom include directory")

SET(NAGOOM_SOURCES
	src/client.cpp
	src/message.cpp
	src/connection.cpp
)

EXEC_PROGRAM(git ARGS "rev-parse HEAD" OUTPUT_VARIABLE REVISION)
STRING(SUBSTRING ${REVISION} 0 8 REVISION)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/include/nagoom.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/include/nagoom.hpp ESCAPE_QUOTES)

ADD_LIBRARY(nagoom STATIC ${NAGOOM_SOURCES})

TARGET_LINK_LIBRARIES(nagoom serializer)
